# scrobble-database

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  scrape_artists.py  scrape_new_scrobbles.py
db/: 01-init.sql
src/: exceptions.py  schemas.py  setup.py  sql.py  util.py  utils.py
src/cli/: __init__.py  artist.py  db.py  pipeline.py  track.py
src/dbschema/: __init__.py  initialize.py  models.py
src/lastfm/: artists.py  base.py  scrobbles.py
